--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,15 @@
 cmake_minimum_required(VERSION 3.8)
-project(PROJECT LANGUAGES C CXX)
+project(son8samplegl LANGUAGES C CXX)
 
-# add_library(${PROJECT_NAME})
-# add_executable(${PROJECT_NAME})
+add_executable(${PROJECT_NAME} source/main.cxx)
 
-# target_include_directories(${PROJECT_NAME}
-#     PUBLIC include
-#     PRIVATE source
-# )
+target_compile_features(${PROJECT_NAME}
+    PRIVATE cxx_std_17
+    PRIVATE c_std_11
+)
 
-# target_compile_features(${PROJECT_NAME}
-#     PRIVATE cxx_std_17
-#     PRIVATE c_std_11
-# )
-
-# target_link_libraries(${PROJECT_NAME})
+target_link_libraries(${PROJECT_NAME})
+target_include_directories(${PROJECT_NAME}
+    PUBLIC include
+    PRIVATE source
+)
