--- a/samples/glfw/CMakeLists.txt
+++ b/samples/glfw/CMakeLists.txt
@@ -1,5 +1,5 @@
 link_libraries(glfw)
 add_executable(glfw-min min.cxx)
 
-link_libraries(glad)
+link_libraries(son8coatglop)
 add_executable(glfw-mingl mingl.cxx)
