glad cube sample in progress

--- a/samples/glad/CMakeLists.txt
+++ b/samples/glad/CMakeLists.txt
@@ -1,2 +1,3 @@
 link_libraries(glfw son8coatglop)
-add_executable(glfw-mingl mingl.cxx)
+add_executable(glad-mingl mingl.cxx)
+add_executable(glad-cube cube.cxx)
