link glm to main project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,9 @@ target_compile_features(${PROJECT_NAME}
 
 add_subdirectory(coatglop)
 add_subdirectory(libs/glfw)
+add_subdirectory(libs/glm)
 
-target_link_libraries(${PROJECT_NAME} son8coatglop glfw)
+target_link_libraries(${PROJECT_NAME} son8coatglop glfw glm)
 target_include_directories(${PROJECT_NAME}
     PUBLIC include
     PRIVATE source
