event, cube helper,  vertex history list draw

--- a/samples/son8samplegl/CMakeLists.txt
+++ b/samples/son8samplegl/CMakeLists.txt
@@ -1,2 +1,4 @@
 link_libraries(son8samplegl)
 add_executable(son8samplegl-mingl mingl.cxx)
+add_executable(son8samplegl-vertex_progress-0_list vertex_progress/0_list.cxx)
+add_executable(son8samplegl-vertex_progress-1_draw vertex_progress/1_draw.cxx)
