--- a/samples/son8samplegl/CMakeLists.txt
+++ b/samples/son8samplegl/CMakeLists.txt
@@ -2,3 +2,4 @@ link_libraries(son8samplegl)
 add_executable(son8samplegl-mingl mingl.cxx)
 add_executable(son8samplegl-vertex_progress-0_list vertex_progress/0_list.cxx)
 add_executable(son8samplegl-vertex_progress-1_draw vertex_progress/1_draw.cxx)
+add_executable(son8samplegl-vertex_progress-2_vbo vertex_progress/2_vbo.cxx)
