add vertex progress shader sample

--- a/samples/son8samplegl/CMakeLists.txt
+++ b/samples/son8samplegl/CMakeLists.txt
@@ -3,3 +3,4 @@ add_executable(son8samplegl-mingl mingl.cxx)
 add_executable(son8samplegl-vertex_progress-0_list vertex_progress/0_list.cxx)
 add_executable(son8samplegl-vertex_progress-1_draw vertex_progress/1_draw.cxx)
 add_executable(son8samplegl-vertex_progress-2_vbo vertex_progress/2_vbo.cxx)
+add_executable(son8samplegl-vertex_progress-3_shader vertex_progress/3_shader.cxx)
